# algebra2

./: .gitignore  CMakeLists.txt  DEVELOPMENT_LOG.md  FIXPOINT_LOG.md  README.md  main.cpp
.github/workflows/: ci.yml
algebra/: Algebra.hh  Algebra_documented.hh  CMakeLists.txt  DoubleAlgebra.hh  InitialAlgebra.hh  Interval.hh  IntervalAlgebra.hh  PriorityAlgebra.hh  SemanticAlgebra.hh  StringAlgebra.hh  TreeAlgebra.hh  TreeAlgebra_documented.hh
tests/: CMakeLists.txt  test_abs.cpp  test_fixpoint.cpp  test_generic.cpp  test_hashcons.cpp  test_string.cpp  test_tree.cpp  test_variables.cpp
